added photos and started statement

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>MCF Students</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
   <!-- responsive meta tag -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- bootstrap css -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#">
-      &nbsp; <img src="./imgs/mcflogo.png" width="80" height="80" alt="MCFStudents" />
+      &nbsp; <img src="./imgs/mcflogo.png"  height="80" alt="MCFStudents" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -27,6 +28,9 @@
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#Meetings">Meetings &nbsp; <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#Statement">Statement of Faith &nbsp; <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#Photos">Photos &nbsp; <span class="sr-only">(current)</span></a>
@@ -43,16 +47,16 @@
       </ul>
     </div>
   </nav>
-    <section class="title">
+  <section class="title">
 
 
 
     <h1>Maryland<br/>Christian<br/>Fellowship</h1>
 
-    </section>
+  </section>
 
-    <section class="content dark padded">
-      <a name="About"></a>
+  <section class="content dark padded">
+    <a name="About"></a>
     <div class="container">
       <div class="row">
         <div class="col">
@@ -64,16 +68,311 @@
         <div class="col-12">
           <p>
             Maryland Christian Fellowship (MCF) - Students is a student group at the University of Maryland, College Park. We strive to be a place where you can explore and share your faith in a safe and encouraging environment. We're a Christian group that's not just for Chrstians...Crazy!...Right?
-            </p>
-            <p>
-              <br/>
-              Whether you are a life-long Christian or you’ve never set foot into a church-like event before, you are welcome to join us in a variety of ways including the Sunday Worship Service, weekly growth groups (MCF's version of small groups), service projects from our own neighborhoods to international trips, and plenty of opportunities for straight up fun. Don’t just learn about God, experience life with Him.
-              </p>
+          </p>
+          <p>
+            <br/>
+            Whether you are a life-long Christian or you’ve never set foot into a church-like event before, you are welcome to join us in a variety of ways including the Sunday Worship Service, weekly growth groups (MCF's version of small groups), service projects from our own neighborhoods to international trips, and plenty of opportunities for straight up fun. Don’t just learn about God, experience life with Him.
+          </p>
         </div>
       </div>
     </div>
   </section>
 
+  <section class="content light padded">
+    <a name="Meetings"></a>
+    <div class="container">
+
+      <div class="row">
+        <div class="col">
+          <h1>Meetings</h1>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-sm-6 column-pad">
+          <h2>Sunday Service</h2>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-sm-3">
+          <section class="mb-3">
+          <p>
+            11:30AM - 12:25PM <br/>
+            2203 Art Sociology <br/>
+            <!-- 3834 Campus Drive, 20742 -->
+          </p>
+          </section>
+        </div>
+        <div class="col-12 col-sm-9">
+          <section class="mb-3">
+          <p>
+            Our Sunday services aim to be an opportunity for Christians and non-Christians to see how God affects real, everyday life. What to expect when you first visit - Our band kicks the service off with a time to worship and prepare our hearts to learn, then we have a contemporary and relevant teaching, and we conclude with time for informal fun and fellowship. Come as you are. Dress is casual.
+          </p>
+          </section>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-sm-6">
+          <h2>Growth Groups</h2>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-12 col-sm-3">
+          <section class="mb-3 d-sm-none">
+            <p>
+              The goal of Growth Groups is to help members grow deeper in their relationship with God in a more personal and interactive environment than Sunday Service can provide. Groups get together each week to learn about the Bible and to have fun together. It’s a great way to meet new people while exploring your faith. There are four great reasons to join a Growth Group:
+            </p>
+            <ul>
+              <li>
+                Weekly pick-me-up that doesn’t eat up your schedule
+              </li>
+              <li>
+                Prayer from others helps you get through the tough times
+              </li>
+              <li>
+                Meet new friends in the area
+              </li>
+              <li>
+                Have fun with other people going through the same things you are
+              </li>
+            </ul>
+            <br>
+          </section>
+          <section class="mb-3">
+            <p>
+              Wednesdays @ 7-8PM <br/>
+              2227 Centreville <br/>
+              Contact:   <a href="mailto:dvdwerking@gmail.com">Dave</a> | <a href="mailto:abelbanko@yahoo.com">Abel</a> <br> <br />
+            </p>
+          </section>
+
+          <section class="mb-3">
+            <p>
+              Thursdays @ 7-8PM <br/>
+              St. Mary's Basement <br/>
+              Contact: <a href="mailto:oconnoll@terpmail.umd.edu">Olivia</a> | <a href="mailto:kevinqb2@msn.com">Kevin</a><br> <br />
+            </p>
+          </section>
+
+          <section class="mb-3">
+            <p>
+              Thursdays @ 7-8PM <br/>
+              7113 - Commons 7 <br/>
+              Contact: <a href="mailto:tiffanyramcharan@yahoo.com">Tiffany</a> | <a href="mailto:jayres97@terpmail.umd.edu">Justin</a><br> <br />
+            </p>
+          </section>
+        </div>
+        <div class="col-12 col-sm-9">
+          <section class="mb-3 d-none d-sm-block">
+            <p>
+              The goal of Growth Groups is to help members grow deeper in their relationship with God in a more personal and interactive environment than Sunday Service can provide. Groups get together each week to learn about the Bible and to have fun together. It’s a great way to meet new people while exploring your faith. There are four great reasons to join a Growth Group:
+            </p>
+            <ul>
+              <li>
+                Weekly pick-me-up that doesn’t eat up your schedule
+              </li>
+              <li>
+                Prayer from others helps you get through the tough times
+              </li>
+              <li>
+                Meet new friends in the area
+              </li>
+              <li>
+                Have fun with other people going through the same things you are
+              </li>
+            </ul>
+          </section>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <section class="content dark padded">
+    <a name="Statement"></a>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1>Statement of Faith</h1>
+    </div>
+    </div>
+
+    <!-- <div class="row">
+      <div class="col">
+      <h2>1. The Scripture</h2>
+      </div>
+      </div>
+    <div class="row">
+      <div class="col">
+        <p>
+          The sole basis of our beliefs is the Bible, the 66 books of the Old and New Testaments. It was uniquely, verbally and fully inspired by the Holy Spirit and was written without error in the original manuscripts. It is the supreme and final authority in faith and life in every age.
+
+<i>(Psalms 12:6, 119:105, 160; Proverbs 30; 2 Timothy 1:13, 3:16; 2 Peter 1:20-21)</i>
+
+
+          </p>
+      </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+        <h2>2. God</h2>
+        </div>
+        </div>
+      <div class="row">
+        <div class="col">
+          <p>
+            There is but one God, infinite in power, wisdom, justice, goodness and love, the Creator of the universe, eternally existing in three persons: Father, Son and Holy Spirit, each of whom possesses all the attributes of Deity and the characteristics of personality.
+
+  <i>(Genesis 1:1, 26, 27, 3:22; Psalm 90:2; Matthew 28:19; 2 Corinthians 13:14; 1 Peter 1:2)</i>
+
+
+            </p>
+        </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+          <h2>3. Man</h2>
+          </div>
+          </div>
+        <div class="row">
+          <div class="col">
+            <p>
+              God created man in His own image, and man, as he was originally created, was innocent before God. But man chose to sin by disobeying God and therefore was alienated from his Creator and came under divine condemnation. Thus all human beings are born with a corrupted nature and without spiritual life, and are totally incapable of pleasing God in and of themselves.
+
+    <i>(Genesis 1:27; Psalms 8:3-6; Isaiah 53:6 59:1-2; Romans 3:23)</i>
+
+
+              </p>
+          </div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+            <h2>4. Jesus Christ</h2>
+            </div>
+            </div>
+          <div class="row">
+            <div class="col">
+              <p>
+                God the Father, by His own choice and out of love for sinful men and women, sent Jesus Christ was conceived by the Holy Spirit and born of a virgin. He is God in the flesh, both true God and true man.<br />
+
+Jesus Christ lived a sinless life and voluntarily suffered and died as our substitute to pay the penalty for our sins, thus satisfying God’s justice and accomplishing salvation for all who trust in Him alone. He rose from the dead in the same body, though glorified, in which He lived and died. He bodily ascended into heaven and sat down at the right hand of God the Father, where He, the only mediator between God and man, makes intercession for His own. He will return to earth personally, visibly and bodily to judge all men and establish His Kingdom.
+
+        <i>(Isaiah 9:6; Matthew 1:22-23; John 1:1-5, 14:10-30; Acts 1:9-11; Romans 1:3-4;
+1 Corinthians 15:3-4; 2 Timothy 6:14-15; Titus 2:13; Hebrews 4:14-15
+
+)</i>
+
+
+                </p>
+            </div>
+            </div> -->
+
+
+            <br /><br />
+            <div class="accordion" id="accordionExample">
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                      <h2>
+                        1. The Scripture
+                        </h2>
+                    </button>
+                  </h5>
+                </div>
+
+                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p>
+                      The sole basis of our beliefs is the Bible, the 66 books of the Old and New Testaments. It was uniquely, verbally and fully inspired by the Holy Spirit and was written without error in the original manuscripts. It is the supreme and final authority in faith and life in every age. <br /> <br />Psalms 12:6, 119:105, 160; Proverbs 30; 2 Timothy 1:13, 3:16; 2 Peter 1:20-21
+                      </p>
+
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingTwo">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      <h2>
+                        2. God
+                        </h2>
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p>
+                      There is but one God, infinite in power, wisdom, justice, goodness and love, the Creator of the universe, eternally existing in three persons: Father, Son and Holy Spirit, each of whom possesses all the attributes of Deity and the characteristics of personality. <br /> <br />
+                      Genesis 1:1, 26, 27, 3:22; Psalm 90:2; Matthew 28:19; 2 Corinthians 13:14; 1 Peter 1:2
+                      </p>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingThree">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      <h2>
+                        3. Man
+                        </h2>
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p>
+                      God created man in His own image, and man, as he was originally created, was innocent before God. But man chose to sin by disobeying God and therefore was alienated from his Creator and came under divine condemnation. Thus all human beings are born with a corrupted nature and without spiritual life, and are totally incapable of pleasing God in and of themselves. <br /> <br />
+                      Genesis 1:27; Psalms 8:3-6; Isaiah 53:6 59:1-2; Romans 3:23
+                      </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+  </div>
+    </section>
+
+    <section class="content light padded">
+      <a name="Photos"></a>
+      <div class="container">
+
+        <div class="row-img">
+
+          <div class="column-img">
+            <img src="./imgs/GGOlympics.jpg" width="100%"/>
+            <img src="./imgs/SpringBreak1.jpg" width="100%"/>
+            <img src="./imgs/SpringBreak2.jpg" width="100%"/>
+            </div>
+
+  <div class="column-img">
+    <img src="./imgs/Jump.jpg" width="100%" />
+    <img src="./imgs/Hiking2.jpg" width="100%"/>
+    </div>
+
+    <div class="column-img">
+        <img src="./imgs/Wakanda.jpg" width="100%"/>
+      <img src="./imgs/TreatOrTrick.jpg" width="100%"/>
+        <img src="./imgs/GirlsSpringBreak.jpg" width="100%"/>
+      </div>
+
+
+
+        </div>
+      </div>
+      <section class="social">
+<a href="https://www.facebook.com/mcfstudents/"><i class="	fa fa-facebook-square"> </i></a>
+<a href="https://www.instagram.com/mcfstudents/"><i class="	fa fa-instagram"></i></a>
+        </section>
+      </section>
 
 
 
@@ -81,6 +380,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
