--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
       <ul class="navbar-nav w-100 justify-content-center">
         <li class="nav-item active">
-          <a class="nav-link" href="#About">About &nbsp; <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#About">About &nbsp;&nbsp; <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#Meetings">Meetings &nbsp; <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#Meetings">Meetings &nbsp;&nbsp; <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#Statement">Statement of Faith &nbsp; <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#Statement">Statement of Faith &nbsp;&nbsp; <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#Photos">Photos &nbsp; <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#Photos">Photos &nbsp;&nbsp; <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="http://www.mcfcc.org/" target=”_blank”>Community Church</a>
@@ -207,7 +207,7 @@
       <div class="accordion" id="accordionExample">
         <div class="container">
           <div class="row">
-            <div class="col-6">
+            <div class="col-12 col-sm-6">
 
               <div class="card">
                 <div class="card-header" id="headingOne">
@@ -317,7 +317,7 @@
               </div>
 
             </div>
-            <div class="col-6">
+            <div class="col-12 col-sm-6">
               <div class="card">
                 <div class="card-header" id="headingSix">
                   <h5 class="mb-0">
@@ -470,8 +470,16 @@
       </div>
     </div>
     <section class="social">
-      <a href="https://www.facebook.com/mcfstudents/" target="_blank"><i class="	fa fa-facebook-square"> </i></a>
-      <a href="https://www.instagram.com/mcfstudents/" target="_blank"><i class="	fa fa-instagram"></i></a>
+      <ul class="list-inline">
+        <li>
+          <a href="https://www.facebook.com/mcfstudents/" target="_blank"><i class="	fa fa-facebook-square"> </i></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/mcfstudents/" target="_blank"><i class="	fa fa-instagram"></i></a>
+            </li>
+        </ul>
+
+
     </section>
   </section>
 
