Changes from jpg to JPG

--- a/index.html
+++ b/index.html
@@ -450,19 +450,19 @@
 
         <div class="column-img">
           <img src="./imgs/GGOlympics.jpg" width="100%"/>
-          <img src="./imgs/SpringBreak1.jpg" width="100%"/>
-          <img src="./imgs/SpringBreak2.jpg" width="100%"/>
+          <img src="./imgs/SpringBreak1.JPG" width="100%"/>
+          <img src="./imgs/SpringBreak2.JPG" width="100%"/>
         </div>
 
         <div class="column-img">
           <img src="./imgs/Jump.jpg" width="100%" />
-          <img src="./imgs/Hiking2.jpg" width="100%"/>
+          <img src="./imgs/Hiking2.JPG" width="100%"/>
         </div>
 
         <div class="column-img">
-          <img src="./imgs/Wakanda.jpg" width="100%"/>
+          <img src="./imgs/Wakanda.JPG" width="100%"/>
           <img src="./imgs/TreatOrTrick.jpg" width="100%"/>
-          <img src="./imgs/GirlsSpringBreak.jpg" width="100%"/>
+          <img src="./imgs/GirlsSpringBreak.JPG" width="100%"/>
         </div>
 
 
